--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@sindresorhus/is": "^4.6.0",
-    "aws-sdk": "^2.1144.0",
+    "aws-sdk": "^2.1145.0",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -19,6 +19,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "nanoid": "^3.3.4",
+    "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
