--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "swiper": "^8.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
