--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "nanoid": "^3.3.4",
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
+    "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
     "swiper": "^8.2.2"
   },
